--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <!-- STYLESHEET -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="css/main.min.css">
     <link rel="stylesheet" href="style.css">
 
@@ -213,7 +213,7 @@
                     <p class="card-text">Get the most from a variety of hot and cold coffee drinks, carefully and hygienically prepared.</p>
                 </div>
                 <div class="card-footer">
-                  <button type="button" class="btn btn-secondary btn-lg btn-block mb-3" data-bs-toggle="modal" data-bs-target= "#coffeeModal">Kape pa more</button>
+                  <button type="button" class="btn btn-primary btn-lg btn-block mb-3" data-bs-toggle="modal" data-bs-target= "#coffeeModal">KAPE PA MORE</button>
                 </div>
             </div>
             <div class="card col-md-4 gx-5">
@@ -240,7 +240,7 @@
                     <p class="card-text">Are you ready to stimulate your palate? Indulge yourself with our delectable meals to satisfy your cravings.</p>
                 </div>
                 <div class="card-footer">
-                  <button class="btn btn-secondary btn-lg btn-block mb-3" data-bs-toggle="modal" data-bs-target= "#breakfastModal">Hukad pa more</button>
+                  <button class="btn btn-primary btn-lg btn-block mb-3" data-bs-toggle="modal" data-bs-target= "#breakfastModal">HUKAD PA MORE</button>
                 </div>
             </div>
             <div class="card col-md-4 gx-5">
@@ -267,7 +267,7 @@
                       you can have them all to brigthen up your day. </p>
                 </div>
                 <div class="card-footer">
-                  <button class="button btn btn-secondary btn-lg btn-block mb-3" data-bs-toggle="modal" data-bs-target= "#refreshmentsModal">Shake pa more</button>
+                  <button class="btn btn-primary btn-lg btn-block mb-3" data-bs-toggle="modal" data-bs-target= "#refreshmentsModal">SHAKE PA MORE</button>
                 </div>
             </div>
         </div>
@@ -520,10 +520,10 @@
         <h1 class="mainHeader">Check our tasty Menu</h1>
                 <br>
             <div class="text-center">   
-                <button type="button" class="btn btn-secondary rounded-pill">show all</button>
-                <button type="button" class="btn btn-secondary rounded-pill">starters</button>
-                <button type="button" class="btn btn-secondary rounded-pill">salad</button>
-                <button type="button" class="btn btn-secondary rounded-pill">specialty</button>
+                <button type="button" class="btn btn-primary rounded-pill">SHOW ALL</button>
+                <button type="button" class="btn btn-primary rounded-pill">STARTERS</button>
+                <button type="button" class="btn btn-primary rounded-pill">SALAD</button>
+                <button type="button" class="btn btn-primary rounded-pill">SPECIALTY</button>
             </div>    
     </div>
             <!-- menu start -->
@@ -626,7 +626,7 @@
                     <h5 class="card-title">Melvin</h5>
                     <p class="card-text">Group Lead. Responsible in coding and creating the structure of this website and providing the guidance to members.</p>
                     </div>
-                    <div class="card-footer"><a href="#!" class="btn btn-secondary">Profile</a></div>
+                    <div class="card-footer"><a href="#!" class="btn btn-primary">PROFILE</a></div>
                 </div>
 
                 <div class="col-md-4 card">
@@ -642,7 +642,7 @@
                     <h5 class="card-title">Vanessa</h5>
                     <p class="card-text">Group Member. Initiated the theme for the website. Responsible in coding and creating the contact and aboutpages.</p>
                     </div>
-                    <div class="card-footer"><a href="#!" class="btn btn-secondary">Profile</a></div>
+                    <div class="card-footer"><a href="#!" class="btn btn-primary">PROFILE</a></div>
                 </div>
 
                 <div class="col-md-4 card">
@@ -658,7 +658,7 @@
                     <h5 class="card-title">Enerio</h5>
                     <p class="card-text">Group member. Responsible in collecting and fomatting of Pictures, inserting them in the Cards. Coding and creating the Modals to display different products.</p>
                     </div>
-                    <div class="card-footer"> <a href="#!" class="btn btn-secondary">Profile</a></div>
+                    <div class="card-footer"> <a href="#!" class="btn btn-primary">PROFILE</a></div>
                 </div>
                 <!-- end of card -->
 
